// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InteractiveField active renders 1`] = `
<label
  className="template_link"
  htmlFor="field_myField"
  id="preview_myField"
  onClick={[Function]}
>
  <span
    data-test-id="interactive_field_myField"
  >
    foo
  </span>
</label>
`;

exports[`InteractiveField disabled renders 1`] = `
<span
  className="template_disabled"
  data-test-id="interactive_field_myField"
>
  [[ foo ]]
</span>
`;

exports[`InteractiveField normal renders 1`] = `
<span
  data-test-id="interactive_field_myField"
>
  foo
</span>
`;
